# mill-sime-py

./: README.md  pyproject.toml  tasks.py
src/mill_sime/: dependencies.py
src/mill_sime/primary/: handler.py
src/mill_sime/primary/common/: responses.py  serializer.py  uri.py
src/mill_sime/primary/routes/: farmer.py
src/mill_sime/primary/routes/responses/: farmer.py
src/mill_sime/secondary/: tables.py
src/mill_sime/secondary/alembic/: env.py
tests/fixtures/: db.py  events.py
tests/primary/routes/: test_farmer.py
